# dispetchercallsqt

./: CMakeLists.txt  Commands.txt  README.md  clang-format-my  database.cpp  database.h  datastorage.cpp  datastorage.h  dispatcherdate.cpp  dispatcherdate.h  dispatcherdate.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  markermanager.cpp  markermanager.h  norounddelegate.cpp  norounddelegate.h  qmlmap  simulatorstart.cpp  simulatorstart.h  uiconnect.cpp  uiconnect.h  uiconnect.ui
